--- a/src/index.html
+++ b/src/index.html
@@ -331,7 +331,7 @@
 
       // Initialization logic
       const initialize = () => {
-        addClickHandlers([".product-card", ".product-tile-1", ".product-tile-2"]);
+        addClickHandlers([".cta"]);
         addUserInteractionListeners();
         initializeMraid();
       };
