Updated the issue with z-index for header discount

--- a/src/index.html
+++ b/src/index.html
@@ -121,10 +121,10 @@
 
 <body class="bg-white">
   <div class="container w-full flex flex-col h-screen overflow-hidden max-w-[100%]">
+    <div class="bg-black p-5 flex justify-center">
+      <img class="w-full max-w-[768px] header-discount">
+    </div>
     <div class="content overflow-y-scroll relative" id="content">
-      <div class=" bg-black p-5 sticky z-50 top-0 flex justify-center">
-        <img class="w-full max-w-[768px] header-discount">
-      </div>
       <div class="flex justify-center">
         <img class="w-full max-w-[768px] header-logo">
       </div>
